--- a/bocks/add-button/__icon/add-button__icon.css
+++ b/bocks/add-button/__icon/add-button__icon.css
@@ -5,3 +5,19 @@
     color: #FFFFFF;
 }
 
+
+@media screen and (min-width: 767px) and (max-width: 1250px) {
+    .add-button__icon {
+        margin: 10px 45px;
+    
+    }
+    }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .add-button__icon {
+        min-width: 16px;
+        min-height: 16px;
+        margin:10px 125px;
+      
+    }
+  }
