--- a/bocks/add-button/add-button.css
+++ b/bocks/add-button/add-button.css
@@ -9,5 +9,22 @@
 }
 
 .add-button:hover {
-    opacity: 0.5;
+    opacity: 0.6;
 }
+
+@media screen and (min-width: 767px) and (max-width: 1250px) {
+  .add-button {
+    margin-left: 10px;
+    min-width: 120px;
+    /*max-width: 60px;*/
+  
+  }
+  }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .add-button {
+      max-width: 282px;
+      margin-left: 0;
+      
+    }
+  }
