--- a/bocks/element/element.css
+++ b/bocks/element/element.css
@@ -7,3 +7,10 @@
     margin-bottom: 20px;
     
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .popup__container {
+      width: 100%;
+      
+    }
+  }
