--- a/bocks/footer/footer.css
+++ b/bocks/footer/footer.css
@@ -5,3 +5,19 @@
     max-width: 318px;
     padding-bottom: 60px;
 }
+
+
+@media screen and (min-width: 767px) and (max-width: 1250px) {
+  .footer {
+    margin-left: 70px;
+    
+  }
+  }
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .footer {
+      margin-left: 19px;
+      padding-bottom: 36px;
+      
+      
+    }
+  }
