--- a/bocks/icon-like/icon-like.css
+++ b/bocks/icon-like/icon-like.css
@@ -1,11 +1,11 @@
 .icon-like {
     width: 21px;
     height: 19px;
-    color: #000000;
-    
 }
 
-/*.icon-like:hover {
-    background: #000000;
-    color: white;
-} Debe cambiar a color negro*/
+.icon-like:hover {
+    background-image: url(/images/BlackLike.svg);
+    width: 21px;
+    height: 19px;
+    
+}
