--- a/bocks/page/page.css
+++ b/bocks/page/page.css
@@ -1,4 +1,10 @@
 .page {
     background-color: black;
-    width: 1280px;
+    width: 100vw;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .page {
+      width: 100%;
+    }
+  }
