--- a/bocks/profile/__edit/profile__edit.css
+++ b/bocks/profile/__edit/profile__edit.css
@@ -9,5 +9,14 @@
 }
 
 .profile__edit:hover {
-  opacity: 0.5;
+  opacity: 0.6;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile__name {
+    font-size: 18px;
+    height: 18px;
+    margin-left: 10px;
+    margin-top:20px;
+  }
 }
