--- a/bocks/profile/__image/profile__image.css
+++ b/bocks/profile/__image/profile__image.css
@@ -7,3 +7,17 @@
     margin-left: 22.5px;
 
 }
+
+@media screen and (min-width: 767px) and (max-width: 1250px) {
+  .profile__image {
+    margin: 3.75px 25px;
+    
+  }
+
+  }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .profile__image {
+      margin: 3.75px 23px;
+    }
+  }
