--- a/bocks/profile/__info/profile__info.css
+++ b/bocks/profile/__info/profile__info.css
@@ -7,3 +7,16 @@
     flex-direction: row;
     display: flex;
 }
+@media screen and (min-width: 767px) and (max-width: 1250px) {
+    .profile__info {
+      margin-top: 0;
+      
+    }
+  
+    }
+
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+        .profile__info  {
+            margin-top: 0; 
+        }
+      }
