--- a/bocks/profile/__name/profile__name.css
+++ b/bocks/profile/__name/profile__name.css
@@ -9,3 +9,12 @@
   margin-bottom: 0;
   margin-top: 0;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile__name {
+    font-size: 22px;
+    line-height: 27px;
+    margin-top: 26px;
+    margin-left: 48px;
+  }
+}
