--- a/bocks/profile/__occupation/profile__occupation.css
+++ b/bocks/profile/__occupation/profile__occupation.css
@@ -9,3 +9,20 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+
+@media screen and (min-width: 767px) and (max-width: 1250px) {
+  .profile__occupation {
+    text-align: center;
+    
+  }
+  }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .profile__occupation {
+    font-size: 14px;
+    line-height: 17px;
+    margin-top: 14px;
+    margin-left: 19px;
+    text-align: center;
+  }
+}
