--- a/bocks/popup/__container/popup__container.css
+++ b/bocks/popup/__container/popup__container.css
@@ -12,9 +12,10 @@
 }
 
 @media screen and (min-width: 767px) and (max-width: 1250px) {
-  .popup {
-    justify-content: space-between;
-  }
+  .popup__container {
+    justify-content: center;
+}
+  
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -22,7 +23,7 @@
     min-width: 282px;
     margin-top: 123px;
     margin-left: 19px;
-    justify-items: center;
+    justify-content: center;
    
     
   }
