--- a/bocks/popup/__title/popup__title.css
+++ b/bocks/popup/__title/popup__title.css
@@ -7,7 +7,8 @@
   line-height: 29px;
   color: #000000;
   margin-left: 36px;
-  bottom: 54px;
+  margin-bottom: 54px;
+
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
