--- a/bocks/profile/__info/profile__info.css
+++ b/bocks/profile/__info/profile__info.css
@@ -9,7 +9,7 @@
 }
 @media screen and (min-width: 767px) and (max-width: 1250px) {
     .profile__info {
-      margin-top: 0;
+      margin-top: 20px;
       
     }
   
