--- a/bocks/profile/profile.css
+++ b/bocks/profile/profile.css
@@ -10,7 +10,7 @@
     .profile  {
         max-width: 1200px;
         min-width: 730px;
-        margin-left: 10px;
+        margin: 0 auto;
         justify-content: center;
        
       
