--- a/bocks/popup/__container/popup__container.css
+++ b/bocks/popup/__container/popup__container.css
@@ -14,6 +14,8 @@
 @media screen and (min-width: 767px) and (max-width: 1250px) {
   .popup__container {
     justify-content: center;
+    min-width: 350px;
+    
 }
   
 }
