--- a/bocks/popup/__title/popup__title.css
+++ b/bocks/popup/__title/popup__title.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 1.5;
   color: #000000;
   margin-left: 36px;
   margin-bottom: 54px;
