--- a/bocks/popup/__title/popup__title.css
+++ b/bocks/popup/__title/popup__title.css
@@ -1,5 +1,4 @@
 .popup__title {
-  border: 1px red solid;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
@@ -7,8 +6,8 @@
   line-height: 1.5;
   color: #000000;
   margin-left: 36px;
-  margin-bottom: 54px;
-
+  margin-bottom: 54;;
+ 
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -18,6 +17,5 @@
     margin: 25px 22px 76px;
     width: 238px;
     
-  
   }
 }
