--- a/index.css
+++ b/index.css
@@ -1,39 +1,38 @@
 @import url(vendor/normalize.css);
-@import url(bocks/page/page.css);
+@import url(blocks/page/page.css);
+@import url(Inter\ Web/inter.css);
 /*header*/
-@import url(bocks/header/header.css);
-@import url(bocks/header/__logo/header__logo.css);
+@import url(blocks/header/header.css);
+@import url(blocks/header/__logo/header__logo.css);
 /*profile*/
-@import url(bocks/profile/profile.css);
-@import url(bocks/profile/__avatar/profile__avatar.css);
-@import url(bocks/profile/__image/profile__image.css);
-@import url(bocks/profile/__info/profile__info.css);
-@import url(bocks/profile/__name/profile__name.css);
-@import url(bocks/profile/__occupation/profile__occupation.css);
-@import url(bocks/profile/__edit/profile__edit.css);
-@import url(bocks/profile/__icon/profile__icon.css);
+@import url(blocks/profile/profile.css);
+@import url(blocks/profile/__avatar/profile__avatar.css);
+@import url(blocks/profile/__image/profile__image.css);
+@import url(blocks/profile/__info/profile__info.css);
+@import url(blocks/profile/__name/profile__name.css);
+@import url(blocks/profile/__occupation/profile__occupation.css);
+@import url(blocks/profile/__edit/profile__edit.css);
+@import url(blocks/profile/__icon/profile__icon.css);
 /*add-button*/
-@import url(bocks/add-button/add-button.css);
-@import url(bocks/add-button/__icon/add-button__icon.css);
+@import url(blocks/add-button/add-button.css);
+@import url(blocks/add-button/__icon/add-button__icon.css);
 /*elements*/
-@import url(bocks/elements/elements.css);
+@import url(blocks/elements/elements.css);
 /*element*/
-@import url(bocks/element/element.css);
-@import url(bocks/element/__image/element__image.css);
-@import url(bocks/element/__title/element__title.css);
-@import url(bocks/element/__footer-photo/element__footer-photo.css);
+@import url(blocks/element/element.css);
+@import url(blocks/element/__image/element__image.css);
+@import url(blocks/element/__title/element__title.css);
+@import url(blocks/element/__footer-photo/element__footer-photo.css);
 /*icon-like*/
-@import url(bocks/icon-like/icon-like.css);
+@import url(blocks/icon-like/icon-like.css);
 /*footer*/
-@import url(bocks/footer/footer.css);
-@import url(bocks/footer/__copyright/footer__copyright.css);
+@import url(blocks/footer/footer.css);
+@import url(blocks/footer/__copyright/footer__copyright.css);
 /*popup*/
-@import url(bocks/popup/popup.css);
-@import url(bocks/popup/_opened/popup_opened.css);
-@import url(bocks/popup/__container/popup__container.css);
-@import url(bocks/popup/__text/popup__text.css);
-@import url(bocks/popup/__title/popup__title.css);
-@import url(bocks/popup/__button/popup__button.css);
-@import url(bocks/popup/close-icon/popup__close-icon.css);
-/*close-icon*/
-@import url(bocks/close-icon/close-icon.css);
+@import url(blocks/popup/popup.css);
+@import url(blocks/popup/_opened/popup_opened.css);
+@import url(blocks/popup/__container/popup__container.css);
+@import url(blocks/popup/__text/popup__text.css);
+@import url(blocks/popup/__title/popup__title.css);
+@import url(blocks/popup/__button/popup__button.css);
+@import url(blocks/popup/close-icon/popup__close-icon.css);
