--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,5 @@
 .popup__title {
-  font-family: 'Inter';
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
@@ -15,7 +15,7 @@
     font-size: 18px;
     line-height: 22px;
     margin: 25px 22px 76px;
-    width: 238px;
+    min-width: 238px;
     
   }
 }
