--- a/blocks/popup/close-icon/popup__close-icon.css
+++ b/blocks/popup/close-icon/popup__close-icon.css
@@ -1,10 +1,10 @@
 .popup__close-icon {
   max-width: 40px;
   max-height: 40px;
-  margin-top: 163px;
-  margin-left: 885px;
+  top: -50px;
+  right: -450px;
   background:none;
-  position: absolute;
+  position: relative;
   color: white;
 }
 
@@ -14,9 +14,8 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .popup__close-icon {
-    min-width: 26px;
-    min-height: 26px;
-    margin-top: 73px;
-    margin-left: 263px;
+    max-width: 26px;
+    right: -255px;
+    top: -40px;
   }
 }
