--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -10,7 +10,7 @@
   line-height: 22px;
   text-align: center;
   color: #FFFFFF;
-  margin: 0 36px 36px;
+  margin: 0 auto 36px;
     
   }
   
@@ -20,11 +20,11 @@
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
     .popup__button {
-      min-width: 238px;
+      max-width: 238px;
       min-height: 46px;
-      margin: 0 22px 25px;
       font-size: 14px;
       line-height: 17px;
+      
       
     }
 
