--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,30 +1,21 @@
 .popup__container {
-  max-width: 430px;
+  max-width: 450px;
+  max-height: 330px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  margin-top: 195px;
-  margin-left: 425px;
-  position: absolute;
+  margin: 195px auto;
   flex-direction: column;
-  padding-top: 34px;
-  
-}
-
-@media screen and (min-width: 767px) and (max-width: 1250px) {
-  .popup__container {
-    justify-content: center;
-    min-width: 350px;
-
-  }
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
   
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .popup__container {
-    min-width: 282px;
-    margin-top: 123px;
-    margin-left: 19px;
+    max-width: 282px;
+    margin: 123px auto 0;
     justify-content: center;
    
     
