--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -7,16 +7,16 @@
   color: #000000;
   border: none;
   border-bottom: 1px solid #d8d4d4;
-  margin-right: 36px;
   width: 358px;
   margin: 0 36px 48px;
+  align-self: center;
  
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .popup__text {
-    margin: 0 22px 46px;
-    min-width: 238px;
-
+    max-width: 238px;
+    margin: 10px 0 46px;
+    
   }
 }
