--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,6 +3,7 @@
   margin: 40px 200px 50px;
   flex-direction: row;
   display: flex;
+  gap: 10px;
 }
 
 @media screen and (min-width: 767px) and (max-width: 1250px) {
