--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,6 +3,8 @@
   font-style:  normal;
   font-weight: 400;
   font-display: swap;
+  src: url("./Inter-Regular.woff") format("woff"), 
+  url("./Inter-Regular.woff2") format("woff2");
 
 }
 
@@ -11,7 +13,8 @@
   font-style:  normal;
   font-weight: 500;
   font-display: swap;
-
+  src: url("./Inter-SemiBold.woff") format("woff"),
+  url("./Inter-SemiBold.woff2") format("woff2"); 
 }
 
 @font-face{
@@ -19,5 +22,7 @@
   font-style:  normal;
   font-weight: 900;
   font-display: swap;
+  src: url("./Inter-Black.woff") format("woff"),
+  url("./Inter-Black.woff2") format("woff2");
 
 }
