Arreglar CSS image-show/cierre ventanas emergentes

--- a/blocks/icon-like/_black/icon-like_black.css
+++ b/blocks/icon-like/_black/icon-like_black.css
@@ -1,11 +1,5 @@
-.icon-like {
-  width: 21px;
-  height: 19px;
-}
-
-/*.icon-like:hover {
+.icon-like_black {
   background-image: url(/images/BlackLike.svg);
   width: 21px;
   height: 19px;
-    
 }
