--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,6 +2,7 @@
   border-radius: 10px 10px 0px 0px;
   display: grid;
   max-width: 282px;
+  max-height: 300px;
   background: #FFFFFF;
   grid-gap: 17px;
   margin-bottom: 20px;
