--- a/blocks/popup/close-icon/popup__close-icon.css
+++ b/blocks/popup/close-icon/popup__close-icon.css
@@ -12,6 +12,16 @@
   opacity: 0.6;
 }
 
+/*.popup__close-icon > .popup__container {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
+}
+.popup__close-icon:hover > .popup__container {
+  visibility: visible;
+  opacity: 1;
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .popup__close-icon {
     max-width: 26px;
