--- a/index.css
+++ b/index.css
@@ -24,16 +24,25 @@
 @import url(blocks/element/__image/element__image.css);
 @import url(blocks/element/__title/element__title.css);
 @import url(blocks/element/__footer-photo/element__footer-photo.css);
+@import url(blocks/element/__delete/element__delete.css);
 /*icon-like*/
 @import url(blocks/icon-like/icon-like.css);
+@import url(blocks/icon-like/_black/icon-like_black.css);
 /*footer*/
 @import url(blocks/footer/footer.css);
 @import url(blocks/footer/__copyright/footer__copyright.css);
 /*popup*/
 @import url(blocks/popup/popup.css);
 @import url(blocks/popup/_opened/popup_opened.css);
+@import url(blocks/popup/_closed-element/popup_closed-element.css);
 @import url(blocks/popup/__container/popup__container.css);
 @import url(blocks/popup/__text/popup__text.css);
 @import url(blocks/popup/__title/popup__title.css);
 @import url(blocks/popup/__button/popup__button.css);
 @import url(blocks/popup/close-icon/popup__close-icon.css);
+@import url(blocks/popup/close-icon/_element/popup__close-icon_element.css);
+/*image*/
+@import url(blocks/image-show//image-show.css);
+@import url(blocks/image-show/__close-icon/image-show__close-icon.css);
+@import url(blocks/image-show/__popup/image-show__popup.css);
+@import url(blocks/image-show/__title/image-show__title.css);
