--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,9 @@
 .element__image {
   border-radius: 10px 10px 0px 0px;
-  width: 100%;
+  max-width: 282px;
   max-height:200px;
+  width: 100%;
+  height: 100%;
 
 }
 
