--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -11,7 +11,7 @@
 
 @media screen and (min-width: 767px) and (max-width: 1250px) {
   .profile__occupation {
-    text-align: center;
+    margin-left: 0;
     
   }
 }
