--- a/blocks/icon-like/icon-like.css
+++ b/blocks/icon-like/icon-like.css
@@ -2,3 +2,9 @@
   width: 21px;
   height: 19px;
 }
+
+.icon-like:hover {
+  background-image: url(/images/BlackLike.svg);
+  width: 21px;
+  height: 19px;
+}
