--- a/blocks/image-show/__title/image-show__title.css
+++ b/blocks/image-show/__title/image-show__title.css
@@ -5,9 +5,9 @@
   font-size: 12px;
   line-height: 15px;
   color: #FFFFFF;
-  margin-top: 525px;
+  margin-top: 547px;
   position: absolute;
   z-index: 5;
-  margin-left: 0;
+  margin-left: -335px;
 
 }
