--- a/blocks/image-show/__close-icon/image-show__close-icon.css
+++ b/blocks/image-show/__close-icon/image-show__close-icon.css
@@ -7,3 +7,13 @@
   z-index: 5;
   
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .image-show__close-icon {
+    top: -25px;
+    margin-right: -280px;
+    max-width: 20px;
+    max-height: 20px;
+      
+  }
+}
