--- a/blocks/image-show/__popup/image-show__popup.css
+++ b/blocks/image-show/__popup/image-show__popup.css
@@ -1,9 +1,16 @@
 .image-show__popup {
-  max-width: 75vw;
   max-height: 75vh;
   position: absolute;
   z-index: 3;
   max-width: 433px;
   min-height: 540px;
     
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .image-show__popup {
+    max-width: 250px;
+    min-height: 350px;
+      
+  }
 }
