--- a/blocks/image-show/__title/image-show__title.css
+++ b/blocks/image-show/__title/image-show__title.css
@@ -11,3 +11,11 @@
   margin-left: -335px;
 
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .image-show__title{
+    margin-left: 0px;
+    margin-top: 360px;
+      
+  }
+}
