--- a/blocks/popup/close-icon/popup__close-icon.css
+++ b/blocks/popup/close-icon/popup__close-icon.css
@@ -12,3 +12,13 @@
   opacity: 0.6;
   
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .popup__close-icon {
+    max-width: 20px;
+    max-height: 20px;
+    right: -250px;
+    top: -25px;
+      
+  }
+}
