--- a/src/blocks/icon-like/_black/icon-like_black.css
+++ b/src/blocks/icon-like/_black/icon-like_black.css
@@ -1,5 +1,5 @@
 .icon-like_black {
-  background-image: url(/images/BlackLike.svg);
+  background-image: url(../images/BlackLike.svg);
   width: 21px;
   height: 19px;
 }
